# Propramming-C

./: CMakeLists.txt  file.txt  file1.txt  funcchisla.h  greeting.txt  lab2.11.c  lab2.6.c  lab2.7.c  lab44.c  lab51.c  rgrChisla.c  sort.c  spiralmatrix.c  test.c  tink.c  ~$ttscreensh.docx
RGR2/: funcchisla.c
lab11/: lab111.c  lab112.c  lab113.c  lab114.c
lab12/: CMakeLists.txt
lab12/background/: CMakeLists.txt
lab12/pipes/: CMakeLists.txt
lab12/task0/: Makefile
lab7/: lab75var3.c
laba10/: MakeFile  func.c  func.h  lab10.c
laba2/: lab2.10.c  lab2.8.c  lab2.9.c
laba3/: lab3.c
laba4/: lab45.c
laba5/: 52доп.c
laba6/: lab64.c  lab65.c
laba8/: lab8na5.c
laba9/: lab9na5var20.c
labthreads/: labmatrixthr.c  labthreads7.c  readme.md  sleepsort.c
lists/: progC2.c
struct_sort/: progC1.c
tests_with_cmocka/: cmockatest.c  test.h  tests.c
work_with_files/: prog4.c  prog5.c
